--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -41,7 +41,7 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
-If desktop edition is detected, run upgrade checks on the seperate desktop containers github repository, and create a seperate / additional upgrade alert for it.
+ALWAYS bundle desktop and server downloads with releases from now on (NOT just source code archives). The secondary Desktop Edition github repo is just for backups and staging. Keep it simple.
 
 
 Prioritize building the mobile templates / language translation modules / admin interface / native app "desktop editions" (via PHPdesktop) above all other infrastructure. Then it's the most useful for the maximum number of people as it can be going forward.
