Cron job reliability improvements, misc UX, Detailed download links in upgrade alerts
Cron job reliability improvements, misc UX, Detailed download links in upgrade alerts

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5258,6 +5258,23 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+5.14.0:
+
+-Cron job reliability improvements
+
+-Detailed download links in upgrade alerts
+
+-Miscellaneous user experience improvements
+
+v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+-------------------------------------------------------------------
+
+
+
 
 
 
