BUG FIX: enabling regular cron on desktop edition (AFTER disabling emulated cron via "desktop_cron_interval" in power user config)
BUG FIX: enabling regular cron on desktop edition (AFTER disabling emulated cron via "desktop_cron_interval" in power user config)

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5317,6 +5317,21 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+5.13.5:
+
+-BUG FIX: enabling regular cron on desktop edition (AFTER disabling emulated cron via "desktop_cron_interval" in power user config)
+
+v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
