Price charts with page zoom user experience (logic overhaul, notices on charts pages)
Price charts with page zoom user experience (logic overhaul, notices on charts pages)

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5330,6 +5330,24 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+5.14.0:
+
+-Price charts with page zoom user experience (logic overhaul, notices on charts pages)
+
+-New documentation and revised documentation
+
+-Minor user experience improvements
+
+v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+-------------------------------------------------------------------
+
+
+
+
 
 
 
