--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5356,9 +5356,11 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Auto-installer script detects logged-in user properly now in ALL debian-based operating systems
 
+-Distro information in system stats / system alert emails (see what 'flavor' the app server operating system is)
+
 -Auto-installer support for DietPI OS
 
--Distro information in system stats
+-Updated documentation
 
 v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
 VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
