--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -50,6 +50,9 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 Remove defipluse API support, the service is a joke. We have coingecko support now anyway.
 
 
+Add config setting to set which asset price light chart shows by default.
+
+
 Add a "reset light charts" button to the admin "reset" page. Also maybe in the future look into "auto-detecting" light chart updating better when restoring from older archival data (overwriting archival data and having light charts detect that change).
 
 
