--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5371,13 +5371,19 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 -------------------------------------------------------------------
-5.15.0:
+5.14.2:
+
+-BUG FIX: recurring-reminder plugin's do-not-disturb setting works properly now
+
+-BUG FIX: Spreadheet export reliability fix
 
 -Better upgrade version detection precision
 
 -Revised auto-installer
 
 -Easter Egg in documentation files :)
+
+-Code cleanup / housekeeping
 
 v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
 VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
